--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -1,14 +1,23 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<!
+<body style="background-color: blue;">
 comentario
--->
+"
 
 <title>hello world!</title>
 </head>
-<body>
+<body style="background-color: bisque;">
        <h1>hello world</1>
 	   <br> slk, num compensa!! <p> ta tranquilo ta favoravel
 </body> <h2>hello world nada aqui é palmeiras</h2>
 </html>
+
+<img src=".https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRpxkR9ItvFiXpBPl6tulrDMLkQqnQpDqK-EwgfpYllakqPagl6bNSb27Df2spuWUHaSBwSYVypvr9Ye_pgLfIhOA">
+
+<img src="./IMAGE/passaro.jpg" widht="600" height="800" alt="passaro maravilhoso e zika">
+</body>
+</html>
+
+
+
